--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -246,7 +246,20 @@
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationOptions.cs" />
-    <Compile Include="MonteCarlo\Detectors\ROfRhoAndTDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\AOfRhoAndZDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ATotalDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCRofRhoAndTimeDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZAndTimeDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\TOfRhoAndAngleDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\TOfRhoDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\TOfAngleDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\TDiffuseDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfRhoAndOmegaDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfXAndYDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfRhoAndAngleDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfAngleDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\RDiffuseDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfRhoAndTimeDetectorInput.cs" />
     <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZDetectorInput.cs" />
     <Compile Include="MonteCarlo\Detectors\DetectorController.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCDetectorController.cs" />
