Updated MGRTE, consolidating files and modifying IO

--- a/src/Vts.MGRTE.ConsoleApp/Vts.MGRTE.ConsoleApp.csproj
+++ b/src/Vts.MGRTE.ConsoleApp/Vts.MGRTE.ConsoleApp.csproj
@@ -80,10 +80,10 @@
     <Content Include="source.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="ua.txt">
+    <Content Include="mua.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="us.txt">
+    <Content Include="mus.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
